Minor Guide Adjustments (#122)
* Delete output.txt

Empty file

* Update README.adoc

* Address PR checker warnings

Co-authored-by: Gilbert Kwan <gkwan@ca.ibm.com>

--- a/README.adoc
+++ b/README.adoc
@@ -27,11 +27,9 @@ NOTE: This repository contains the guide documentation source. To view the guide
 
 Explore how to document and filter RESTful APIs from code or static files by using MicroProfile OpenAPI.
 
-
 :openapi-url: http://localhost:9080/openapi
 :inv-url: http://localhost:9080/inventory/systems
 :sys-url: http://localhost:9080/inventory/properties
-
 
 == What you'll learn
 
@@ -71,7 +69,8 @@ include::{common-includes}/twyb-intro.adoc[]
 ifndef::cloud-hosted[]
 Next, point your browser to the {openapi-url}[{openapi-url}^] URL and you'll see the RESTful APIs of the `inventory` service.
 You can also point to the {openapi-url}/ui[{openapi-url}/ui^] URL for a more interactive view of the deployed APIs.
-This UI is built from the https://swagger.io/tools/swagger-ui/[Open Source Swagger UI^] and renders the generated `/openapi` document into a very user friendly page.
+This UI is built from the https://swagger.io/tools/swagger-ui/[Open Source Swagger UI^] 
+and renders the generated `/openapi` document into a very user friendly page.
 endif::[]
 
 ifdef::cloud-hosted[]
@@ -84,11 +83,13 @@ curl http://localhost:9080/openapi
 {: codeblock}
 
 A UI is also available for a more interactive view of the deployed APIs.
-To visit the UI, select **Launch Application** from the menu of the IDE, type in **9080** to specify the port number 
-and click the **OK** button. You’re redirected to the **`https://accountname-9080.theiadocker-4.proxy.cognitiveclass.ai`** URL, 
-where **accountname** is your account name. Click the **interactive UI** link on the welcome page. 
-This UI is built from the [Open Source Swagger UI](https://swagger.io/tools/swagger-ui)
-renders the generated **/openapi** document into a very user friendly page.
+To visit the UI, select **Launch Application** from the menu of the IDE, 
+type in **9080** to specify the port number and click the **OK** button. 
+You’re redirected to a URL similar to **`https://accountname-9080.theiadocker-4.proxy.cognitiveclass.ai`**, 
+where **accountname** is your account name. 
+Click the **interactive UI** link on the welcome page. 
+This UI is built from the [Open Source Swagger UI](https://swagger.io/tools/swagger-ui), 
+which renders the generated **/openapi** document into a very user friendly page.
 endif::[]
 
 [role='command']
@@ -128,8 +129,9 @@ curl http://localhost:9080/openapi
 ```
 {: codeblock}
 
-To visit the UI for a more interactive view of the APIs, select **Launch Application** from the menu of the IDE, type in **9080** to specify the port number 
-and click the **OK** button. You’re redirected to the **`https://accountname-9080.theiadocker-4.proxy.cognitiveclass.ai`** URL.
+To visit the UI for a more interactive view of the APIs, select **Launch Application** from the menu of the IDE, 
+type in **9080** to specify the port number and click the **OK** button. 
+You’re redirected to the **`https://accountname-9080.theiadocker-4.proxy.cognitiveclass.ai`** URL.
 Click the **interactive UI** link on the welcome page. 
 endif::[]
 
@@ -146,7 +148,9 @@ the JAX-RS framework.
 ----
 
 [role="edit_command_text"]
-Add OpenAPI [hotspot=APIResponses file=0]`@APIResponses`, [hotspot=Operation file=0]`@Operation` and [hotspot=Parameter file=0]`@Parameter` annotations to the two JAX-RS methods, [hotspot=host-property hotspot=Parameter file=0]`getPropertiesForHost()` and [hotspot=listContents file=0]`listContents()`.
+Add OpenAPI [hotspot=APIResponses file=0]`@APIResponses`, [hotspot=Operation file=0]`@Operation` 
+and [hotspot=Parameter file=0]`@Parameter` annotations to the two JAX-RS methods, 
+[hotspot=host-property hotspot=Parameter file=0]`getPropertiesForHost()` and [hotspot=listContents file=0]`listContents()`.
 
 
 InventoryResource.java
@@ -170,13 +174,15 @@ optional, but it can be helpful to organize a method with multiple responses.
 |===
 
 ifndef::cloud-hosted[]
-Since the Open Liberty server was started in development mode at the beginning of the guide, your changes were automatically picked up.
+Since the Open Liberty server was started in development mode at the beginning of the guide, 
+your changes were automatically picked up.
 Refresh the {openapi-url}[{openapi-url}^] URL to see the updated OpenAPI tree. 
 The two endpoints at which your JAX-RS methods are served are now more meaningful:
 endif::[]
 
 ifdef::cloud-hosted[]
-Since the Open Liberty server was started in development mode at the beginning of the guide, your changes were automatically picked up. 
+Since the Open Liberty server was started in development mode at the beginning of the guide, 
+your changes were automatically picked up. 
 Run the following curl command to see the updated OpenAPI tree:
 ```
 curl http://localhost:9080/openapi
@@ -228,10 +234,13 @@ endif::[]
 ----
 
 
-OpenAPI annotations can also be added to POJOs to describe what they represent. Currently, your OpenAPI
-document doesn't have a very meaningful description of the [hotspot=InventoryListClass file=1]`InventoryList` POJO and hence it's very
-difficult to tell exactly what that POJO is used for. To describe the [hotspot=InventoryListClass file=1]`InventoryList` POJO in more detail, augment the
-[hotspot file=1]`src/main/java/io/openliberty/guides/inventory/model/InventoryList.java` file with some OpenAPI annotations.
+OpenAPI annotations can also be added to POJOs to describe what they represent. 
+Currently, your OpenAPI document doesn't have a very meaningful description of the 
+[hotspot=InventoryListClass file=1]`InventoryList` POJO and hence it's very difficult to tell 
+exactly what that POJO is used for. 
+To describe the [hotspot=InventoryListClass file=1]`InventoryList` POJO in more detail, 
+augment the [hotspot file=1]`src/main/java/io/openliberty/guides/inventory/model/InventoryList.java` 
+file with some OpenAPI annotations.
 
 [role='code_command hotspot file=1', subs="quotes"]
 ----
@@ -240,7 +249,8 @@ difficult to tell exactly what that POJO is used for. To describe the [hotspot=I
 ----
 
 [role='edit_command_text']
-Add OpenAPI [hotspot=InventoryList hotspot=Systems file=1]`@Schema` annotations to the [hotspot=InventoryList file=1]`InventoryList` class and the [hotspot=Systems file=1]`systems` variable.
+Add OpenAPI [hotspot=InventoryList hotspot=Systems file=1]`@Schema` annotations to 
+the [hotspot=InventoryList file=1]`InventoryList` class and the [hotspot=Systems file=1]`systems` variable.
 
 InventoryList.java
 [source, Java, linenums, role='code_column hide_tags=copyright']
@@ -258,7 +268,9 @@ which is referenced in the [hotspot file=1]`InventoryList` class.
 ----
 
 [role='edit_command_text']
-Add OpenAPI [hotspot=SystemData hotspot=Hostname hotspot=Properties file=2]`@Schema` annotations to the [hotspot=SystemData file=2]`SystemData` class, the [hotspot=Hostname file=2]`hostname` variable and the [hotspot=Properties file=2]`properties` variable.
+Add OpenAPI [hotspot=SystemData hotspot=Hostname hotspot=Properties file=2]`@Schema` annotations 
+to the [hotspot=SystemData file=2]`SystemData` class, 
+the [hotspot=Hostname file=2]`hostname` variable and the [hotspot=Properties file=2]`properties` variable.
 
 SystemData.java
 [source, Java, linenums, role='code_column hide_tags=copyright']
@@ -336,13 +348,13 @@ In this case, you are matching the `404` response that is returned by the `/inve
 endpoint and setting the previously missing description. To remove an `APIResponse` element
 or another filterable element, simply return `null`.
 
-The [hotspot=filterOpenAPI file=0]`filterOpenAPI()` method allows filtering of the singleton [hotspot=OpenAPI file=0]`OpenAPI` element. Unlike other filter
-methods, when you override [hotspot=filterOpenAPI file=0]`filterOpenAPI()`, it is called only once as the last method
-for a particular filter. Hence, make sure that it doesn't override any other filter operations that are
-called before it. Your current OpenAPI document doesn't provide much information on the application
-itself or on what server and port it runs on. This information is usually provided in the `info`
-and `servers` elements, which are currently missing. Use the `OASFactory` class to manually set these
-and other elements of the OpenAPI tree from the `org.eclipse.microprofile.openapi.models`
+The [hotspot=filterOpenAPI file=0]`filterOpenAPI()` method allows filtering of the singleton [hotspot=OpenAPI file=0]`OpenAPI` element. 
+Unlike other filter methods, when you override [hotspot=filterOpenAPI file=0]`filterOpenAPI()`, 
+it is called only once as the last method for a particular filter. 
+Hence, make sure that it doesn't override any other filter operations that are called before it. 
+Your current OpenAPI document doesn't provide much information on the application itself or on what server and port it runs on. 
+This information is usually provided in the `info` and `servers` elements, which are currently missing. 
+Use the `OASFactory` class to manually set these and other elements of the OpenAPI tree from the `org.eclipse.microprofile.openapi.models`
 package. The [hotspot=OpenAPI file=0]`OpenAPI` element is the only element that cannot be removed since that would mean
 removing the whole OpenAPI tree.
 
@@ -404,7 +416,7 @@ servers:
     text/plain: {}
 ----
 
-For more information about which elements you can filter, see the https://openliberty.io/docs/ref/microprofile/[MicroProfile API^].
+For more information about which elements you can filter, see the https://openliberty.io/docs/ref/microprofile/[MicroProfile API documentation^].
 
 To learn more about MicroProfile Config, visit the MicroProfile Config https://github.com/eclipse/microprofile-config[GitHub repository^]
 and try one of the MicroProfile Config https://openliberty.io/guides/?search=Config[guides^].
@@ -531,7 +543,8 @@ Results :
 Tests run: 4, Failures: 0, Errors: 0, Skipped: 0
 ----
 
-The warning and error messages are expected and result from a request to a bad or an unknown hostname. This request is made in the `testUnknownHost()` test from the `InventoryEndpointIT` integration test.
+The warning and error messages are expected and result from a request to a bad or an unknown hostname. 
+This request is made in the `testUnknownHost()` test from the `InventoryEndpointIT` integration test.
 
 [role='command']
 include::{common-includes}/devmode-quit.adoc[]
