--- a/README.adoc
+++ b/README.adoc
@@ -164,8 +164,7 @@ Clearly, there are many more OpenAPI annotations now, so let’s break them down
 [cols="35, 200", options="header"]
 |===
 | *Annotation*    | *Description*
-| [hotspot=APIResponses file=0]`@APIResponses` | A container for multiple responses from an API operation. This annotation is
-optional, but it can be helpful to organize a method with multiple responses.
+| [hotspot=APIResponses file=0]`@APIResponses` | A container for multiple responses from an API operation. This annotation is optional, but it can be helpful to organize a method with multiple responses.
 | [hotspot=APIResponse file=0]`@APIResponse`  | Describes a single response from an API operation.
 | [hotspot=Content file=0]`@Content`      | Provides a schema and examples for a particular media type.
 | [hotspot=Schema file=0]`@Schema`       | Defines the input and output data types.
