--- a/README.adoc
+++ b/README.adoc
@@ -204,7 +204,15 @@ endif::[]
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/InventoryList'
+              type: object
+              properties:
+                systems:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/SystemData'
+                total:
+                  format: int32
+                  type: integer
 /inventory/systems/{hostname}:
   get:
     summary: Get JVM system properties for particular host
