--- a/README.adoc
+++ b/README.adoc
@@ -227,7 +227,7 @@ endif::[]
       "404":
         description: Missing description
         content:
-          text/plain: {}
+          application/json: {}
       "200":
         description: JVM system properties of a particular host.
         content:
@@ -411,7 +411,7 @@ servers:
   description: Invalid hostname or the system service may not be running on
     the particular host.
   content:
-    text/plain: {}
+    application/json: {}
 ----
 
 For more information about which elements you can filter, see the https://openliberty.io/docs/ref/microprofile/[MicroProfile API documentation^].
